Table "comments" {
  "id" int4 [pk, not null, increment]
  "post_id" int4 [not null]
  "user_id" int4 [not null]
  "content" text [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "posts" {
  "id" int4 [pk, not null, increment]
  "user_id" int4 [not null]
  "title" varchar(255) [not null]
  "content" text [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "users" {
  "id" int4 [pk, not null, increment]
  "username" varchar(50) [unique, not null]
  "email" varchar(100) [unique, not null]
  "password_hash" varchar(255) [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Ref "comments_post_id_fkey":"posts"."id" < "comments"."post_id"

Ref "comments_user_id_fkey":"users"."id" < "comments"."user_id"

Ref "posts_user_id_fkey":"users"."id" < "posts"."user_id"
